<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StunRay</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">TowerAPI</string>
    <string name="title_section2">Cell Listing</string>
    <string name="title_section3">N/A</string>
    <string name="button_getTowers">Get Nearest Towers</string>
    <string name="text_noTowerData">No Tower Data</string>
    <string name="title_activity_tower_details">TowerDetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_value">No Value</string>
    <string name="average_rssi_asu">Average RSSI Asu:</string>
    <string name="average_rssi_db">Average RSSI Db:</string>
    <string name="sample_size">Sample Size RSSI:</string>
    <string name="download_speed">Download Speed:</string>
    <string name="upload_speed">Upload Speed:</string>
    <string name="ping_time">Ping Time:</string>
    <string name="reliability">Reliability:</string>
    <string name="label_4g">4G</string>
    <string name="label_3g">3G</string>
    <string name="label_2g">2G</string>

</resources>
